--- a/style.css
+++ b/style.css
@@ -1,19 +1,13 @@
 /* Reset some default styles */
-html, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, 
-del, dfn,  img, ins, kbd, q, s, samp,
-small, strike, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
+html, body, div, h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, del, dfn, img, ins, kbd, q, s, samp,
+small, strike, sub, sup, tt, var, b, u, i, center,
+dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	margin: 0;
-	padding: 5;
+	padding: 0;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
@@ -21,196 +15,182 @@ time, mark, audio, video {
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
-    display: block;
-    margin: 8;
-    font-family: Arial, sans-serif;
-    background-color: #3c444c;
-    font-size: 14px;
-    overflow-y: scroll; /* Add vertical scrollbar */
+	font-family: Arial, sans-serif;
+	background-color: #3c444c;
+	font-size: 21px;
+	overflow-y: scroll; /* Add vertical scrollbar */
+	margin: 0;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
 
-#page {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 50px;
+header {
+	background-color: #323232;
+	color: #ce6a6c;
+	text-align: center;
+	padding: 20px;
 }
 
-div {
-    display: block;
+#page {
+	width: 960px;
+	margin: 0 auto;
+	padding-bottom: 50px;
 }
+
 /* New styles for the "About Me" section with a static size */
 #about {
-    height: 550px; /* Set the desired fixed height for the section */
-    margin-left:auto;
-    margin-right:auto;
-    width:960px;
-    background-color: #24262f; /* Optional background color for the "About Me" section */
-    padding: 10px;
-    font-size: 16px;
-    text-align: center;
-    padding-bottom: 10px;
+	height: 800px;
+	margin: 0 auto;
+	background-color: #24262f;
+	padding: 10px;
+	font-size: 16px;
+	text-align: center;
+	padding-bottom: 10px;
 }
 
 #about h2 {
-    font-size: 2rem;
-    background-color: #24262f; /* Set the background color for the heading */
-    padding: 20px; /* Add some padding to separate it from the background */
+	font-size: 2rem;
+	background-color: #24262f;
+	padding: 20px;
 }
 
 #about p {
-    font-size: 1.2rem;
-    padding: 20px; /* Add some padding to separate it from the background */
+	font-size: 1.2rem;
+	padding: 20px;
 }
 
-
 #portfolio {
-    background-color: #494d55; /* Set the background color for the title */
-    margin: 20px auto;
-    width:  800px;
-    height: 600px;
+	width: 800px;
+	height: 600px;
+	margin: 20px auto;
+	background-color: #494d55;
 }
 
 .portfolio-title {
-    font-size: 2rem;
-    margin-top: 20px; /* Adjust as needed to create spacing between title and projects */
-    padding: 10px; /* Add padding to style the title */
+	font-size: 2rem;
+	margin-top: 20px;
+	padding: 10px;
 }
 
-.project-grid{
-    display:grid;
-    grid-template-columns: 350px 200px;
-    grid-row: auto auto;
-    grid-column-gap: 5px;
-    grid-row-gap: 5px;
+.project-grid {
+	display: grid;
+	grid-template-columns: 350px 200px;
+	grid-row: auto auto;
+	grid-column-gap: 5px;
+	grid-row-gap: 5px;
 }
 
-.project{
-    width: 300px;
-    height: 200px;
-    margin-bottom: 10px;
-    background-color: #4f5e6a;
-    padding: 20px;
-    border: 1px solid #24262f;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    background-color:#333;
-    padding:20px;
-    border-radius:10px;
-    font-size:40px;
-    font-family: Arial, sans-serif;
-    cursor: pointer; /* Change cursor on hover */
-    transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
+.project {
+	width: 300px;
+	height: 200px;
+	margin-bottom: 10px;
+	background-color: #333;
+	padding: 20px;
+	border: 1px solid #24262f;
+	border-radius: 10px;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+	font-size: 40px;
+	font-family: Arial, sans-serif;
+	cursor: pointer;
+	transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
 }
 
 /* Add a class to control opacity and animation */
 .project.hidden {
-    opacity: 0;
-    transform: translateY(20px); /* Optional: Add a slight upward translation */
-    transition: opacity 0.5s ease, transform 0.5s ease;
+	opacity: 0;
+	transform: translateY(20px); /* Optional: Add a slight upward translation */
+	transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 /* Keyframes for the fade-in animation */
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-        transform: translateY(20px); /* Optional: Add a slight upward translation */
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
+	0% {
+		opacity: 0;
+		transform: translateY(20px); /* Optional: Add a slight upward translation */
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
-
 
 /* Hover effect styles */
 .project:hover {
-    transform: scale(1.05); /* Scale up on hover */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add a stronger shadow on hover */
-    background-color: #566169; /* Change background color on hover */
+	transform: scale(1.05);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+	background-color: #566169;
 }
 
 .project img {
-    max-width: 100%;
+	max-width: 100%;
 }
 
 .project h3 {
-    margin-top: 10px;
-    font-size: 1.5rem;
+	margin-top: 10px;
+	font-size: 1.5rem;
 }
 
 .project p {
-    font-size: 1rem;
+	font-size: 1rem;
 }
 
-header {
-    background-color: #323232;
-    color: #ce6a6c;
-    text-align: center;
-    margin-top: 25px;
-    padding-bottom: 4px;
-    margin-bottom: 7px;
-    padding: 20px;
-}
 
 
 nav ul {
-    list-style: none;
+	list-style: none;
 }
 
 nav ul li {
-    display: inline;
-    margin-right: 20px;
+	display: inline;
+	margin-right: 20px;
 }
 
 nav ul li a {
-    text-decoration: none;
-    color: #c5b3b6;
-    font-weight: bold;
+    font-size: 20px;
+	text-decoration: none;
+	color: #c5b3b6;
+	font-weight: bold;
 }
 
-h1, h2, h3
-{
-    text-decoration: none;
-    color: #ce6a6c;
-    font-weight: bold;
+h1, h2, h3 {
+	text-decoration: none;
+	color: #ce6a6c;
+	font-weight: bold;
 }
 
 p {
-    text-decoration: none;
-    color: #c5b3b6;
-    font-weight: bold;
+	text-decoration: none;
+	color: #c5b3b6;
+	font-weight: bold;
 }
 
 section {
-    padding: 20px;
+	padding: 20px;
 }
 
 /* Styles for social icons */
 .social-icons {
-    position: absolute;
-    top: 20px;
-    right: 20px;
+	position: absolute;
+	top: 20px;
+	right: 20px;
 }
 
 .social-icons a {
-    text-decoration: none;
-    color: #dedede;
-    font-size: 24px;
-    margin-left: 10px;
+	text-decoration: none;
+	color: #dedede;
+	font-size: 24px;
+	margin-left: 10px;
 }
 
 .social-icons a:hover {
-    color: #0074D9; /* Change color on hover */
+	color: #0074D9;
 }
-
-
