--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Reset some default styles */
 html, body, div, h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, del, dfn, img, ins, kbd, q, s, samp,
+a, abbr, acronym, address, big, cite, del, dfn, ins, kbd, q, s, samp,
 small, strike, sub, sup, tt, var, b, u, i, center,
 dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -48,7 +48,7 @@ header {
 
 /* New styles for the "About Me" section with a static size */
 #about {
-	height: 800px;
+	height: 650px;
 	margin: 0 auto;
 	background-color: #24262f;
 	padding: 10px;
@@ -98,7 +98,7 @@ header {
 	border: 1px solid #24262f;
 	border-radius: 10px;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-	font-size: 40px;
+	font-size: 16px;
 	font-family: Arial, sans-serif;
 	cursor: pointer;
 	transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
@@ -131,6 +131,7 @@ header {
 }
 
 .project img {
+    align-self: center;
 	max-width: 100%;
 }
 
@@ -179,7 +180,7 @@ section {
 
 /* Styles for social icons */
 .social-icons {
-	position: absolute;
+    position: absolute;
 	top: 20px;
 	right: 20px;
 }
