--- a/style.css
+++ b/style.css
@@ -40,6 +40,22 @@ header {
 	padding: 20px;
 }
 
+/* Style the PDF resume button */
+.resume-button {
+    background-color: #0074D9; /* Button background color */
+    color: #fff; /* Button text color */
+    padding: 10px 20px; /* Button padding */
+    border-radius: 5px; /* Button border radius */
+    text-decoration: none; /* Remove underline */
+    font-weight: bold;
+    margin-left: 10px; /* Adjust as needed for spacing */
+}
+
+/* Hover effect for the button */
+.resume-button:hover {
+    background-color: #0056b3; /* Change background color on hover */
+}
+
 #page {
 	width: 960px;
 	margin: 0 auto;
@@ -67,6 +83,25 @@ header {
 	font-size: 1.2rem;
 	padding: 20px;
 }
+
+/* Styles for social icons */
+.about social-icons {
+    position: sticky;
+	top: 20px;
+	right: 20px;
+}
+
+.about social-icons a {
+	text-decoration: none;
+	color: #dedede;
+	font-size: 24px;
+	margin-left: 10px;
+}
+
+.about social-icons a:hover {
+	color: #0074D9;
+}
+
 
 #portfolio {
 	width: 800px;
@@ -168,6 +203,21 @@ h1, h2, h3 {
 	font-weight: bold;
 }
 
+#contact
+{
+	width: 800px;
+	height: 100px;
+	margin: 20px auto;
+	align-content: center;
+	background-color: #494d55;
+}
+
+/* Style links to remove text highlight */
+a {
+    text-decoration: none; /* Remove underline */
+    color: inherit; /* Use the default text color */
+}
+
 p {
 	text-decoration: none;
 	color: #c5b3b6;
@@ -178,20 +228,4 @@ section {
 	padding: 20px;
 }
 
-/* Styles for social icons */
-.social-icons {
-    position: absolute;
-	top: 20px;
-	right: 20px;
-}
 
-.social-icons a {
-	text-decoration: none;
-	color: #dedede;
-	font-size: 24px;
-	margin-left: 10px;
-}
-
-.social-icons a:hover {
-	color: #0074D9;
-}
