--- a/style.css
+++ b/style.css
@@ -84,28 +84,9 @@ header {
 	padding: 20px;
 }
 
-/* Styles for social icons */
-.about social-icons {
-    position: sticky;
-	top: 20px;
-	right: 20px;
-}
-
-.about social-icons a {
-	text-decoration: none;
-	color: #dedede;
-	font-size: 24px;
-	margin-left: 10px;
-}
-
-.about social-icons a:hover {
-	color: #0074D9;
-}
-
-
 #portfolio {
-	width: 800px;
-	height: 600px;
+	width: 700px;
+	height: 400px;
 	margin: 20px auto;
 	border: 1px solid #24262f;
 	border-radius: 10px;
@@ -130,7 +111,7 @@ header {
 
 .project {
 	width: 300px;
-	height: 200px;
+	height: 210px;
 	margin-bottom: 10px;
 	background-color: #333;
 	padding: 20px;
@@ -179,8 +160,6 @@ header {
 	font-size: 1rem;
 }
 
-
-
 nav ul {
 	list-style: none;
 }
@@ -228,4 +207,21 @@ section {
 	padding: 20px;
 }
 
+/* Styles for social icons */
+.social-icons {
+    position: sticky;
+	top: 20px;
+	right: 20px;
+}
+
+.social-icons a {
+	text-decoration: none;
+	color: #dedede;
+	font-size: 24px;
+	margin-left: 10px;
+}
+
+.social-icons a:hover {
+	color: #ce6a6c;
+}
 
